# butterfingers-tauri-manage

./: .env  .gitignore  LICENSE  README.md  package-lock.json  package.json  setup_dependencies.sh
src/: confirmedEnrollment.html  enroll.js  enrollProcess.html  index.html  process.js  selectEmpToEnroll.html
src-tauri/: .gitignore  Cargo.toml  main.desktop  tauri.conf.json
src-tauri/src/: main.rs
src/styles/: empToEnrollStyles.css  enrollConfirmFingerprintStyles.css  navigationStyles.css  sharedStyles.css
